# Trello2Monthly_Server_CMake

./: CMakeLists.txt
Trello2Monthly_Server_CMake/: CMakeLists.txt  Trello2Monthly_Server_CMake.cpp  Trello2Monthly_Server_CMake.h
